# metatorch

./: .gitignore  CHANGELOG.md  Dim.hs  Example.hs  Generate.hs  Layer.hs  Metatorch.hs  README.md  Tensor.hs  metatorch.cabal
Layer/: CNN.hs  Cnn.hs  RNN.hs  Rnn.hs
Metatorch/: Layer.hs  Tensor.hs
examples/: Batch.hs  CNN.hs  LSTM.hs  Mlp.hs  Token.hs
src/: Metatorch.hs
src/Metatorch/: Dim.hs  Generate.hs  Layer.hs
src/Metatorch/Layer/: CNN.hs  Embedding.hs  RNN.hs
